# Sujets

./: README.md  circle.spec
.github/workflows/: parse.yml
Asteroids/subject/: Asteroids.md  data.txt
BSQ/: .gitignore
BSQ/Cobra/: generator.py  main.py  tester.py  utils.py
BSQ/Participants/: generator  generator.py  main.py  utils.py
CIRCLE/: circle-fr.tex  circle.py
FRACTAL/: fractal-tree-easy-fr.tex
Free_Santa/: output.html
Pokeparse/: Sujet.md
Pédiluve/: bash_logo.jpg:Zone.Identifier  bravo.png:Zone.Identifier  cercle.png:Zone.Identifier  fractale_exemple.jpg:Zone.Identifier  fractals_algues.jpg:Zone.Identifier  pediluve_obligatoire.jpg:Zone.Identifier  piscine.jpg:Zone.Identifier  pydiluve.tex  zooplacton.png:Zone.Identifier  zooplancton.jpg:Zone.Identifier
Royaume de Monte-Carlo/: README.md
Tron_tournament/: README.md
Tron_tournament/Cobra/server/: CMakeLists.txt  game.conf
Tron_tournament/Cobra/server/src/: AppConfig.cpp  AppConfig.h  GameModel.cpp  GameModel.h  GameServer.cpp  GameServer.h  GameView.cpp  GameView.h  MainWindow.cpp  MainWindow.h  Player.h  Protocol.h  TickLoop.cpp  TickLoop.h  main.cpp
WSL/: installation_wsl.md  installation_wsl.tex
Winter_Camp/: output.html
archive/: Sujets CC.xlsx
astroders/: output.html
cannele_clicker/: output.html
cpoolday-1/: output.html
cpoolday-1_en/: output.html
easter_jump/: output.html
exemple/: output.html
fil_d_ariane/: Le_Fil_d'Ariane.docx
mycepaint/: output.html
pacman/: .gitignore
pendu/: output.html
pokepoireau/: output.html
rules/: rules.md
(+306 files in other folders)
